[package]
name = "yarrow_validator"
version = "0.1.0"
authors = ["Shoeboxam <shoeboxam@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.5.0"
bytes = "0.4.12"
libc = "0.2"
byteorder = "1.3.2"
ffi-support = "0.3.5"

# openapi
serde = {version = "^1.0", features = ["derive"]}
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "0.7"
base64 = "~0.7.0"


[build-dependencies]
prost-build = { version = "0.5.0" }
cbindgen = "0.9.1"

[lib]
name = "yarrow_validator"
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true